Change GH token var

--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: gershwin-root-archive
-        github-token: ${{ secrets.GH_PAT }} # token with actions:read permissions on target repo
+        github-token: ${{ secrets.GITHUB_TOKEN }} # token with actions:read permissions on target repo
         repository: gershwin-os/root
         run-id: 1
     - name: Display structure of downloaded files
