--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -19,19 +19,19 @@ jobs:
         ports:
           - 8080:8080
     steps:
-    - uses: actions/download-artifact@v4
-      with:
-        name: gershwin-root-archive
-        github-token: ${{ secrets.GH_TOKEN }} # token with actions:read permissions on target repo
-        repository: gershwin-os/root
-        run-id: 1
-    - name: Display structure of downloaded files
-      run: ls -R
-    - name: Install packages for workflow
+    - name: Get latest workflow run ID
+      id: get_latest_run
       run: |
-        apt-get update
-        apt install -y unzip
-    - name: Build ISO on Debian 12
+        latest_run=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs?event=push&status=success&per_page=1" | jq -r '.workflow_runs[0].id')
+        echo "::set-output name=run_id::$latest_run"
+      shell: bash
+    - name: Get artifact URL
+      id: get_artifact_url
       run: |
-        ls -la
-        du -h -s *
+        artifact_url=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs/${{ steps.get_latest_run.outputs.run_id }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+        echo "::set-output name=artifact_url::$artifact_url"
+      shell: bash
+    - name: Download artifact
+      run: |
+        curl -s -o artifact.zip -L -u ${{ secrets.GH_TOKEN }} "${{ steps.get_artifact_url.outputs.artifact_url }}"
+      shell: bash
