--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -27,24 +27,28 @@ jobs:
         id: get_latest_amd64_run
         run: |
           latest_run_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs?event=push&status=success&workflow=Build+root+on+Debian+12+AMD64&per_page=1" | jq -r '.workflow_runs[0].id')
+          echo "Latest AMD64 run ID: $latest_run_amd64"
           echo "AMD64_RUN_ID=$latest_run_amd64" >> $GITHUB_ENV
         shell: bash
       - name: Get latest ARM64 workflow run ID
         id: get_latest_arm64_run
         run: |
           latest_run_arm64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs?event=push&status=success&workflow=Build+root+on+Debian+12+ARM64&per_page=1" | jq -r '.workflow_runs[0].id')
+          echo "Latest ARM64 run ID: $latest_run_arm64"
           echo "ARM64_RUN_ID=$latest_run_arm64" >> $GITHUB_ENV
         shell: bash
       - name: Get AMD64 artifact URL
         id: get_amd64_artifact_url
         run: |
           artifact_url_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs/${{ env.AMD64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+          echo "AMD64 Artifact URL: $artifact_url_amd64"
           echo "AMD64_ARTIFACT_URL=$artifact_url_amd64" >> $GITHUB_ENV
         shell: bash
       - name: Get ARM64 artifact URL
         id: get_arm64_artifact_url
         run: |
           artifact_url_arm64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs/${{ env.ARM64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+          echo "ARM64 Artifact URL: $artifact_url_arm64"
           echo "ARM64_ARTIFACT_URL=$artifact_url_arm64" >> $GITHUB_ENV
         shell: bash
       - name: Download AMD64 artifact
