--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Get latest AMD64 workflow run ID
         id: get_latest_amd64_run
         run: |
-          latest_run_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs?event=push&status=success&workflow=Build+root+on+Debian+12+AMD64&per_page=1" | jq -r '.workflow_runs[0].id')
+          latest_run_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/Build%20root%20on%20Debian%2012%20AMD64/runs?status=success&per_page=1" | jq -r '.workflow_runs[0].id')
           echo "Latest AMD64 run ID: $latest_run_amd64"
           echo "AMD64_RUN_ID=$latest_run_amd64" >> $GITHUB_ENV
         shell: bash
       - name: Get latest ARM64 workflow run ID
         id: get_latest_arm64_run
         run: |
-          latest_run_arm64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs?event=push&status=success&workflow=Build+root+on+Debian+12+ARM64&per_page=1" | jq -r '.workflow_runs[0].id')
+          latest_run_arm64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/Build%20root%20on%20Debian%2012%20ARM64/runs?status=success&per_page=1" | jq -r '.workflow_runs[0].id')
           echo "Latest ARM64 run ID: $latest_run_arm64"
           echo "ARM64_RUN_ID=$latest_run_arm64" >> $GITHUB_ENV
         shell: bash
