--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Get latest AMD64 workflow run ID
         id: get_latest_amd64_run
         run: |
-          amd64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/Build%20root%20on%20Debian%2012%20AMD64/runs?status=success&per_page=1")
+          amd64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/build_root_amd64.yml/runs?status=success&per_page=1")
           echo "AMD64 API response: $amd64_response"
           latest_run_amd64=$(echo $amd64_response | jq -r '.workflow_runs[0].id')
           echo "Latest AMD64 run ID: $latest_run_amd64"
@@ -35,7 +35,7 @@ jobs:
       - name: Get latest ARM64 workflow run ID
         id: get_latest_arm64_run
         run: |
-          arm64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/Build%20root%20on%20Debian%2012%20ARM64/runs?status=success&per_page=1")
+          arm64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/build_root_arm64.yml/runs?status=success&per_page=1")
           echo "ARM64 API response: $arm64_response"
           latest_run_arm64=$(echo $arm64_response | jq -r '.workflow_runs[0].id')
           echo "Latest ARM64 run ID: $latest_run_arm64"
