--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -19,25 +19,25 @@ jobs:
       ports:
         - 8080:8080
     steps:
-      - name: Get latest ARM64 workflow run ID
-        id: get_latest_arm64_run
+      - name: Get latest AMD64 workflow run ID
+        id: get_latest_amd64_run
         run: |
-          arm64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/build_root_arm64.yml/runs?status=success&per_page=1")
-          echo "ARM64 API response: $arm64_response"
-          latest_run_arm64=$(echo $arm64_response | jq -r '.workflow_runs[0].id')
-          echo "Latest ARM64 run ID: $latest_run_arm64"
-          echo "ARM64_RUN_ID=$latest_run_arm64" >> $GITHUB_ENV
+          amd64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/build_root_amd64.yml/runs?status=success&per_page=1")
+          echo "AMD64 API response: $amd64_response"
+          latest_run_amd64=$(echo $amd64_response | jq -r '.workflow_runs[0].id')
+          echo "Latest AMD64 run ID: $latest_run_amd64"
+          echo "AMD64_RUN_ID=$latest_run_amd64" >> $GITHUB_ENV
         shell: bash
-      - name: Get ARM64 artifact URL
-        id: get_arm64_artifact_url
+      - name: Get AMD64 artifact URL
+        id: get_amd64_artifact_url
         run: |
-          artifact_url_arm64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs/${{ env.ARM64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
-          echo "ARM64 Artifact URL: $artifact_url_arm64"
-          echo "ARM64_ARTIFACT_URL=$artifact_url_arm64" >> $GITHUB_ENV
+          artifact_url_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs/${{ env.AMD64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+          echo "AMD64 Artifact URL: $artifact_url_amd64"
+          echo "AMD64_ARTIFACT_URL=$artifact_url_amd64" >> $GITHUB_ENV
         shell: bash
-      - name: Download ARM64 artifact
+      - name: Download AMD64 artifact
         run: |
-          curl -s -o root_arm64.zip -L -u ${{ secrets.GH_TOKEN }} "${{ env.ARM64_ARTIFACT_URL }}"
+          curl -s -o root_amd64.zip -L -u ${{ secrets.GH_TOKEN }} "${{ env.AMD64_ARTIFACT_URL }}"
         shell: bash
       - name: Build ISO on Debian 12 AMD64
         run: |
