Determine which dirs we have

--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -45,6 +45,8 @@ jobs:
         shell: bash
       - name: Build ISO on Debian 12 ARM64
         run: |
+          pwd
+          ls -la ..
           ls -la
           du -h -s *
           unzip root_arm64.zip
