See if build.sh can be found

--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -48,6 +48,7 @@ jobs:
           pwd
           ls -la ..
           ls -la ../..
+          find / -name build.sh
           ls -la
           du -h -s *
           unzip root_arm64.zip
