Other ways of looking around

--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -14,7 +14,8 @@ jobs:
     steps:
       - name: Check if build.sh exists
         run: |
-          find / -name build.sh
+          pwd
+          ls -la
 
   build:
     runs-on: ubuntu-latest
