Add build script

--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -46,5 +46,6 @@ jobs:
           ls -la
           du -h -s *
           unzip root_amd64.zip
+          ./build.sh
           ls -la
         continue-on-error: true
