Add build for arm64 and list contents

--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -47,5 +47,6 @@ jobs:
           du -h -s *
           unzip root_amd64.zip
           ./build.sh
+          ls -la live-default
           ls -la
         continue-on-error: true
