--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -29,7 +29,7 @@ jobs:
         name: Run commands
         id: runcmd
         with:
-          arch: armv8
+          arch: aarch64
           distro: ubuntu22.04    
       # Set an output parameter `uname` for use in subsequent steps
           run: |
