Get dir for scripting

--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -43,6 +43,7 @@ jobs:
         shell: bash
       - name: Build ISO on Debian 12 AMD64
         run: |
+          pwd
           ls -la
           du -h -s *
           unzip root_amd64.zip
