--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -59,7 +59,7 @@ jobs:
             ls -la
             du -h -s *
             unzip root_arm64.zip
-            ./build.sh
+            #./build.sh
             ls -la live-default
             ls -la
       - name: Get the output
