Disable ARM64 to speed up for now and pull in all artifacts

--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -54,7 +54,7 @@ jobs:
             --privileged
           run: |
             unzip root_arm64.zip
-            ./build.sh
+            #./build.sh
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
