--- a/.github/workflows/build-iso-amd64.yml
+++ b/.github/workflows/build-iso-amd64.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Get latest AMD64 workflow run ID
+      - name: Get latest AMD64 workflow run ID for root
         id: get_latest_amd64_run
         run: |
           amd64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/workflows/build_root_amd64.yml/runs?status=success&per_page=1")
@@ -30,20 +30,83 @@ jobs:
           echo "Latest AMD64 run ID: $latest_run_amd64"
           echo "AMD64_RUN_ID=$latest_run_amd64" >> $GITHUB_ENV
         shell: bash
-      - name: Get AMD64 artifact URL
+      - name: Get AMD64 artifact URL for root
         id: get_amd64_artifact_url
         run: |
           artifact_url_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/root/actions/runs/${{ env.AMD64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
           echo "AMD64 Artifact URL: $artifact_url_amd64"
           echo "AMD64_ARTIFACT_URL=$artifact_url_amd64" >> $GITHUB_ENV
         shell: bash
-      - name: Download AMD64 artifact
+      - name: Download AMD64 artifact for root
         run: |
           curl -s -o root_amd64.zip -L -u ${{ secrets.GH_TOKEN }} "${{ env.AMD64_ARTIFACT_URL }}"
+        shell: bash
+      - name: Get latest AMD64 workflow run ID for system
+        id: get_latest_system_amd64_run
+        run: |
+          amd64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/system/actions/workflows/build_system_amd64.yml/runs?status=success&per_page=1")
+          echo "AMD64 API response: $amd64_response"
+          latest_run_amd64=$(echo $amd64_response | jq -r '.workflow_runs[0].id')
+          echo "Latest AMD64 run ID: $latest_run_amd64"
+          echo "AMD64_RUN_ID=$latest_run_amd64" >> $GITHUB_ENV
+        shell: bash
+      - name: Get AMD64 artifact URL for system
+        id: get_system_amd64_artifact_url
+        run: |
+          artifact_url_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/system/actions/runs/${{ env.AMD64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+          echo "AMD64 Artifact URL: $artifact_url_amd64"
+          echo "AMD64_ARTIFACT_URL=$artifact_url_amd64" >> $GITHUB_ENV
+        shell: bash
+      - name: Download AMD64 artifact for root
+        run: |
+          curl -s -o system_amd64.zip -L -u ${{ secrets.GH_TOKEN }} "${{ env.AMD64_ARTIFACT_URL }}"
+        shell: bash
+      - name: Get latest AMD64 workflow run ID for developer
+        id: get_latest_developer_amd64_run
+        run: |
+          amd64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/developer/actions/workflows/build_developer_amd64.yml/runs?status=success&per_page=1")
+          echo "AMD64 API response: $amd64_response"
+          latest_run_amd64=$(echo $amd64_response | jq -r '.workflow_runs[0].id')
+          echo "Latest AMD64 run ID: $latest_run_amd64"
+          echo "AMD64_RUN_ID=$latest_run_amd64" >> $GITHUB_ENV
+        shell: bash
+      - name: Get AMD64 artifact URL for developer
+        id: get_developer_amd64_artifact_url
+        run: |
+          artifact_url_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/developer/actions/runs/${{ env.AMD64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+          echo "AMD64 Artifact URL: $artifact_url_amd64"
+          echo "AMD64_ARTIFACT_URL=$artifact_url_amd64" >> $GITHUB_ENV
+        shell: bash
+      - name: Download AMD64 artifact for developer
+        run: |
+          curl -s -o developer_amd64.zip -L -u ${{ secrets.GH_TOKEN }} "${{ env.AMD64_ARTIFACT_URL }}"
+        shell: bash
+      - name: Get latest AMD64 workflow run ID for applications
+        id: get_latest_applications_amd64_run
+        run: |
+          amd64_response=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/applications/actions/workflows/build_applications_amd64.yml/runs?status=success&per_page=1")
+          echo "AMD64 API response: $amd64_response"
+          latest_run_amd64=$(echo $amd64_response | jq -r '.workflow_runs[0].id')
+          echo "Latest AMD64 run ID: $latest_run_amd64"
+          echo "AMD64_RUN_ID=$latest_run_amd64" >> $GITHUB_ENV
+        shell: bash
+      - name: Get AMD64 artifact URL for applications
+        id: get_applications_amd64_artifact_url
+        run: |
+          artifact_url_amd64=$(curl -s -X GET -u ${{ secrets.GH_TOKEN }} "https://api.github.com/repos/gershwin-os/applications/actions/runs/${{ env.AMD64_RUN_ID }}/artifacts" | jq -r '.artifacts[0].archive_download_url')
+          echo "AMD64 Artifact URL: $artifact_url_amd64"
+          echo "AMD64_ARTIFACT_URL=$artifact_url_amd64" >> $GITHUB_ENV
+        shell: bash
+      - name: Download AMD64 artifact for applications
+        run: |
+          curl -s -o applications_amd64.zip -L -u ${{ secrets.GH_TOKEN }} "${{ env.AMD64_ARTIFACT_URL }}"
         shell: bash
       - name: Build ISO on Debian 12 AMD64
         run: |
           unzip root_amd64.zip
+          unzip system_amd64.zip
+          unzip developer_amd64.zip
+          unzip applications_amd64.zip
           ./build.sh
         continue-on-error: false
       - name: Upload artifact
