--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -1,12 +1,13 @@
 name: Build ISO on Debian 12 ARM64
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
+  #push:
+  #  branches:
+  #    - main
+  #pull_request:
+  #  branches:
+  #    - main
 
 jobs:
   build:
