--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -55,7 +55,7 @@ jobs:
             --privileged
           run: |
             unzip system_arm64.zip
-            #./build.sh
+            ./build.sh
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
