Add remaining archives to extract

--- a/.github/workflows/build-iso-arm64.yml
+++ b/.github/workflows/build-iso-arm64.yml
@@ -95,6 +95,8 @@ jobs:
             --privileged
           run: |
             unzip system_arm64.zip
+            unzip developer_arm64.zip
+            unzip applications_arm64.zip
             ./build.sh
       - name: Upload artifact
         uses: actions/upload-artifact@v4
